[package]
name = "human-in-the-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.40", features = ["derive", "env"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.4", features = ["collector"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-sdk = { version = "0.4.6", default-features = false, features = ["server", "macros", "2025_03_26"] }
async-trait = "0.1.88"
